<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">OverShare</string>
    <string name="action_settings" tools:keep="@string/action_settings">Settings</string>
    <string name="no_cards_to_display">No Cards</string>
    <string name="card_title">Card Title</string>
    <string name="add_field_title">Add Field</string>
    <string name="fields">Fields:</string>
    <string name="no_fields">No Fields</string>
    <string name="edit_card">Edit Card</string>
    <string name="create_card">Create Card</string>
    <string name="save">Save</string>
    <string name="do_not_blank">You can\'t leave this field blank</string>
    <string name="account">Account</string>
    <string name="name" tools:keep="@string/name">Name</string>
    <string name="first_last" tools:keep="@string/first_last">First Last</string>
    <string name="email" tools:keep="@string/email">Email</string>
    <string name="reset_password" tools:keep="@string/reset_password">Reset Password</string>
    <string name="sign_out" tools:keep="@string/sign_out">Sign Out</string>
    <string name="field_title">Field Title</string>
    <string name="field_value">Field Value</string>
    <string name="delete">Delete</string>
    <string name="edit_field">Edit Field</string>
    <string name="click_the_button_to_add_a_card">Click the \'+\' button to add a card.</string>
    <string name="click_the_receive_button">Click the receive button to start receiving a card.</string>
    <string name="confirm_delete_title">Delete this card?</string>
    <string name="cant_undo">You cannot undo this action.</string>
    <string-array name="tab_titles">
        <item>My Cards</item>
        <item>Received Cards</item>
    </string-array>
    <string name="aboutLibraries_description_showIcon" tools:keep="@string/aboutLibraries_description_showIcon">true</string>
    <string name="aboutLibraries_description_showVersion" tools:keep="@string/aboutLibraries_description_showVersion">true</string>
    <string name="aboutLibraries_description_text" tools:keep="@string/aboutLibraries_description_text">OverShare Developed by Bailey Seymour at Full Sail University</string>
    <string name="define_Chirp" tools:keep="@string/define_Chirp" />
    <string name="library_Chirp_author" tools:keep="@string/library_Chirp_author">Asio Ltd.</string>
    <string name="library_Chirp_authorWebsite" tools:keep="@string/library_Chirp_authorWebsite">https://chirp.io</string>
    <string name="library_Chirp_libraryName" tools:keep="@string/library_Chirp_libraryName">Chirp Android SDK</string>
    <string name="library_Chirp_libraryDescription" tools:keep="@string/library_Chirp_libraryDescription">Chirp enables your apps to send and receive information using sound. A "chirp" encodes an array of bytes as an audio signal, which can be transmitted by any device with a speaker and received by any device with a microphone and Chirp SDK.</string>
    <string name="define_Nammu" tools:keep="@string/define_Nammu" />
    <string name="library_Nammu_author" tools:keep="@string/library_Nammu_author">Michal Tajchert</string>
    <string name="library_Nammu_authorWebsite" tools:keep="@string/library_Nammu_authorWebsite">https://github.com/tajchert/Nammu</string>
    <string name="library_Nammu_libraryName" tools:keep="@string/library_Nammu_libraryName">Nammu</string>
    <string name="library_Nammu_libraryDescription" tools:keep="@string/library_Nammu_libraryDescription">Permission helper for Android M - background check, monitoring and more.</string>
    <string name="define_vrv" tools:keep="@string/define_vrv" />
    <string name="library_vrv_author" tools:keep="@string/library_vrv_author">Takayuki Yorikane</string>
    <string name="library_vrv_authorWebsite" tools:keep="@string/library_vrv_authorWebsite">https://github.com/tyorikan/voice-recording-visualizer</string>
    <string name="library_vrv_libraryName" tools:keep="@string/library_vrv_libraryName">voice-recording-visualizer</string>
    <string name="library_vrv_libraryDescription" tools:keep="@string/library_vrv_libraryDescription">Simple Visualizer from mic input for Android.</string>
    <string name="define_firebase" tools:keep="@string/define_firebase" />
    <string name="library_firebase_author" tools:keep="@string/library_firebase_author">Google</string>
    <string name="library_firebase_authorWebsite" tools:keep="@string/library_firebase_authorWebsite">https://github.com/firebase/firebase-android-sdk</string>
    <string name="library_firebase_libraryName" tools:keep="@string/library_firebase_libraryName">Firebase Android SDK</string>
    <string name="library_firebase_libraryDescription" tools:keep="@string/library_firebase_libraryDescription">Firebase is an app development platform with tools to help you build, grow and monetize your app.</string>
    <string name="about" tools:keep="@string/about">About</string>
    <string name="credits">Credits</string>
    <string name="volume_low">Volume is low!</string>
    <string name="copied_to_clipboard">Copied to clipboard.</string>
    <string name="maximize_vol" tools:keep="@string/maximize_vol">Maximize Volume?</string>
    <string name="maximize_vol_desc" tools:keep="@string/maximize_vol_desc">Music is playing are you sure you want to set the volume to the max?</string>
    <string name="yes" tools:keep="@string/yes">Yes</string>
    <string name="no" tools:keep="@string/no">No</string>
    <string name="setting_up">Setting up…</string>
    <string name="receiving">Receiving</string>
    <string name="received">Received</string>
    <string name="ready_to_receive">Ready to Receive Cards</string>
    <string name="failed_to_receive">Failed to receive card.</string>
    <string name="error_conn_mic">Error Connecting to Microphone</string>
    <string name="sharing_transmitting">Sharing… Transmitting sound</string>
    <string name="proceed_with_saving">Proceed with saving?</string>
    <string name="field_value_improper_format">The field value appears to be in the improper format. Are you sure you still want to save?</string>
    <string name="you_cant_leave_this_blank">You can\'t leave this blank.</string>
    <string name="this_isnt_valid_url">This isn\'t a valid URL</string>
    <string name="not_username">This isn\'t a valid username.</string>
    <string name="not_phone">This isn\'t a valid phone number.</string>
    <string name="not_email">This isn\'t a valid email address.</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="empty_state_icon">Empty State Icon</string>
    <string name="paste">Paste</string>
    <string name="state_icon">State Icon</string>
    <string name="account_info_saved">Account info saved.</string>
    <string name="reset_pw_sent">Reset password email sent!</string>
    <string name="reset_pw_fail">Failed to send reset email.</string>
    <string name="receive">Receive</string>
    <string name="toggle_night_mode">Toggle Night Mode</string>
    <string name="disable_night_mode">Disable Night Mode</string>
    <string name="enable_night_mode">Enable Night Mode</string>
    <string name="download_as_mp3">Download as MP3</string>
    <string name="play_audio">Play Audio</string>
    <string name="copy_as_text">Share as Plain Text</string>
    <string name="copy_card_url">Share Card URL</string>
    <string name="in_received">Already in received queue</string>
    <string name="added_received">Added to received queue</string>
    <string name="sign_out_q">Sign out?</string>
    <string name="sign_out_dialog_msg">Are you sure you would like to sign out of your account?</string>
    <string name="reset_password_q">Reset password?</string>
    <string name="reset_password_dialog_msg">This will send a reset password link to the email associated with your account. Would you like to proceed?</string>
    <string name="must_sign_in">You must sign-in first</string>
    <string name="micro_req_shortcut">Microphone permission is required before the shortcut can be activated.</string>
    <string name="undo">Undo</string>
    <string name="theme_applied">Theme applied.</string>
    <plurals name="save_btn_fmt">
        <item quantity="one">Save %d card</item>
        <item quantity="other">Save %d cards</item>
    </plurals>


</resources>
